# cryptoTask

./: .env.example  .gitignore  README.md  docker-compose.yml
app/: Dockerfile  main.py  pyproject.toml
app/db/: __init__.py  connect.py
app/db/models/: __init__.py
app/endpoints/: __init__.py  endpoints.py  price.py
app/repository/: __init__.py  price.py  repository.py
app/service/: __init__.py  price.py  service.py
app/service/response_models/: __init__.py  price.py
bd_init/: Dockerfile  main.py  pyproject.toml
deribit_client/: Dockerfile  client.py  database.py  main.py  price.py  pyproject.toml  store_data.py
